Created page with "{| class="wikitable float-right mw-collapsible mw-uncollapsed" !style="width: 33%;"|Název !style="width: 66%;"|Popis |- | {{MenuCommand|Mřížka}} | Pokud je zaškrtnuto, bude při úpravách náčrtu zobrazena mřížka. Používá se pro nové náčrty. Je uloženo ve vlastnosti náčrtů {{PropertyView|Zobrazit mřížku}}. |- | {{MenuCommand|Automatická rozteč mřížky}} | Pokud je zaškrtnuto, bude rozestup mřížky automaticky přizpůsoben podle rozměrů zo..."

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -139,46 +139,46 @@
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
-<th style="width: 33%;">Name
+<th style="width: 33%;">N&aacute;zev
 </th>
-<th style="width: 66%;">Description
+<th style="width: 66%;">Popis
 </th></tr>
 <tr>
-<td><b>Grid</b>
+<td><b>M&#345;&iacute;&#382;ka</b>
 </td>
-<td>If checked, a grid will be shown while the sketch is in edit mode. Used for new sketches. Is stored in the <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Show Grid</b> property of sketches.
+<td>Pokud je za&scaron;krtnuto, bude p&#345;i &uacute;prav&aacute;ch n&aacute;&#269;rtu zobrazena m&#345;&iacute;&#382;ka. Pou&#382;&iacute;v&aacute; se pro nov&eacute; n&aacute;&#269;rty. Je ulo&#382;eno ve vlastnosti n&aacute;&#269;rt&#367; <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Zobrazit m&#345;&iacute;&#382;ku</b>.
 </td></tr>
 <tr>
-<td><b>Grid auto-spacing</b>
+<td><b>Automatick&aacute; rozte&#269; m&#345;&iacute;&#382;ky</b>
 </td>
-<td>If checked, grid spacing is automatically adapted based on the view dimensions. Used for new sketches. Is stored in the <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Grid Auto</b> property of sketches.
+<td>Pokud je za&scaron;krtnuto, bude rozestup m&#345;&iacute;&#382;ky automaticky p&#345;izp&#367;soben podle rozm&#283;r&#367; zobrazen&iacute;. Pou&#382;&iacute;v&aacute; se pro nov&eacute; n&aacute;&#269;rtky. Je ulo&#382;eno ve vlastnosti n&aacute;&#269;rtk&#367; <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Automatick&aacute; m&#345;&iacute;&#382;ka</b>.
 </td></tr>
 <tr>
-<td><b>Grid spacing</b>
+<td><b>Rozte&#269; m&#345;&iacute;&#382;ky</b>
 </td>
-<td>The distance between two subsequent grid lines. Used as a base value if <b>Grid auto-spacing</b> is enabled. Used for new sketches. Is stored in the <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Grid Size</b> property of sketches.
+<td>Vzd&aacute;lenost mezi dv&#283;ma po sob&#283; jdouc&iacute;mi liniemi m&#345;&iacute;&#382;ky. Pou&#382;&iacute;v&aacute; se jako z&aacute;kladn&iacute; hodnota, pokud je povolena funkce <b>Automatick&aacute; rozte&#269; m&#345;&iacute;&#382;ky</b>. Pou&#382;&iacute;v&aacute; se pro nov&eacute; n&aacute;&#269;rtky. Je ulo&#382;ena ve vlastnosti n&aacute;&#269;rtk&#367; <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Velikost m&#345;&iacute;&#382;ky</b> .
 </td></tr>
 <tr>
-<td><b>Pixel size threshold</b>
+<td><b>Pr&aacute;h velikosti Pixel</b>
 </td>
-<td>The grid spacing threshold in pixels. Only used if <b>Grid auto-spacing</b> is enabled. If the onscreen spacing is smaller than this value, physical grid spacing is multiplied by the <b>Major grid line interval</b> value. If the onscreen spacing is larger than the threshold value times the <b>interval</b> value, physical grid spacing is divided by the <b>interval</b> value. If the <b>interval</b> value is set to 1, 10 is used instead in these calculations.
+<td>Prahov&aacute; hodnota rozestupu m&#345;&iacute;&#382;ky v pixelech. Pou&#382;&iacute;v&aacute; se pouze v p&#345;&iacute;pad&#283;, &#382;e je povolena funkce <b>Automatick&aacute; rozte&#269; m&#345;&iacute;&#382;ky</b>. Pokud je rozestup na obrazovce men&scaron;&iacute; ne&#382; tato hodnota, fyzick&yacute; rozestup m&#345;&iacute;&#382;ky se vyn&aacute;sob&iacute; hodnotou <b>Interval hlavn&iacute;ch lini&iacute; m&#345;&iacute;&#382;ky</b>. Pokud je rozestup na obrazovce v&#283;t&scaron;&iacute; ne&#382; prahov&aacute; hodnota n&aacute;soben&aacute; hodnotou <b>interval</b>, fyzick&yacute; rozestup m&#345;&iacute;&#382;ky se vyd&#283;l&iacute; hodnotou <b>interval</b>. Pokud je hodnota <b>interval</b> nastavena na 1, pou&#382;ije se v t&#283;chto v&yacute;po&#269;tech m&iacute;sto toho hodnota 10.
 </td></tr>
 <tr>
-<td><b>Minor Grid Lines</b>
+<td><b>Men&scaron;&iacute; &#269;&aacute;ry m&#345;&iacute;&#382;ky</b>
 </td>
-<td>For minor grid lines you can specify:
-<ul><li><b>Line pattern</b></li>
-<li><b>Line width</b></li>
-<li><b>Line color</b></li></ul>
+<td>Pro men&scaron;&iacute; m&#345;&iacute;&#382;kov&eacute; linie m&#367;&#382;ete zadat:
+<ul><li><b>Vzor &#269;&aacute;ry</b></li>
+<li><b>Tlou&scaron;&#357;ka &#269;&aacute;ry</b></li>
+<li><b>Barva &#269;&aacute;ry</b></li></ul>
 </td></tr>
 <tr>
-<td><b>Major Grid Lines</b>
+<td><b>Hlavn&iacute; m&#345;&iacute;&#382;kov&eacute; &#269;&aacute;ry</b>
 </td>
-<td>For major grid lines you can specify:
-<ul><li><b>Major grid line interval</b>: The number of squares between major grid lines. Set to 1 to disable major grid lines.</li>
-<li><b>Line pattern</b></li>
-<li><b>Line width</b></li>
-<li><b>Line color</b></li></ul>
+<td>Pro hlavn&iacute; m&#345;&iacute;&#382;kov&eacute; linie m&#367;&#382;ete zadat:
+<ul><li><b>Hlavn&iacute; linka m&#345;&iacute;&#382;ky v&#382;dy</b>: Po&#269;et &#269;tverc&#367; mezi hlavn&iacute;mi liniemi m&#345;&iacute;&#382;ky. Nastavte hodnotu 1, chcete-li hlavn&iacute; linie m&#345;&iacute;&#382;ky deaktivovat.</li>
+<li><b>Vzor &#269;&aacute;ry</b></li>
+<li><b>Tlou&scaron;&#357;ka &#269;&aacute;ry</b></li>
+<li><b>Barva &#269;&aacute;ry</b></li></ul>
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Display">Display</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Display.png&amp;filetimestamp=20240513144018&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Display.png" decoding="async" width="400" height="383" class="mw-file-element" data-file-width="600" data-file-height="574"></a></span>
@@ -439,15 +439,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122152349
+Cached time: 20260122154622
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.227 seconds
+CPU time usage: 0.152 seconds
+Real time usage: 0.244 seconds
 Preprocessor visited node count: 1225/1000000
-Post&#8208;expand include size: 30058/2097152 bytes
-Template argument size: 11628/2097152 bytes
+Post&#8208;expand include size: 30221/2097152 bytes
+Template argument size: 11791/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -455,19 +455,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.435      1 -total
- 13.66%    7.162      1 Template:Sketcher_Tools_navi/cs
- 10.31%    5.408      1 Template:Userdocnavi/cs
-  9.50%    4.983      2 Template:Navigation_menu_2
-  9.34%    4.899      1 Template:Value
-  8.27%    4.336      3 Template:PropertyView
-  7.91%    4.148     96 Template:MenuCommand
-  6.89%    3.611      2 Template:Docnav
-  5.52%    2.895      3 Template:KEY
-  5.11%    2.677      1 Template:VersionMinus
+100.00%   48.991      1 -total
+ 16.22%    7.948      1 Template:Userdocnavi/cs
+ 15.83%    7.757      1 Template:Sketcher_Tools_navi/cs
+ 11.32%    5.548      2 Template:Navigation_menu_2
+  9.17%    4.495      3 Template:PropertyView
+  8.01%    3.927     96 Template:MenuCommand
+  6.84%    3.351      1 Template:Value
+  5.17%    2.532      3 Template:Variable
+  4.67%    2.286      2 Template:Docnav
+  4.27%    2.092      3 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152349 and revision id 1742449. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122154622 and revision id 1742451. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
