Created page with "==Zobrazení=="

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -180,7 +180,9 @@
 <li><b>Tlou&scaron;&#357;ka &#269;&aacute;ry</b></li>
 <li><b>Barva &#269;&aacute;ry</b></li></ul>
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Display">Display</span></h2>
+<p><span id="Display"></span>
+</p>
+<h2><span id="Zobrazen.C3.AD"></span><span class="mw-headline" id="Zobrazen&iacute;">Zobrazen&iacute;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Display.png&amp;filetimestamp=20240513144018&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Display.png" decoding="async" width="400" height="383" class="mw-file-element" data-file-width="600" data-file-height="574"></a></span>
 </p><p>On this page you can specify the following:
 </p>
@@ -439,13 +441,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122154622
+Cached time: 20260122154657
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.152 seconds
-Real time usage: 0.244 seconds
-Preprocessor visited node count: 1225/1000000
+CPU time usage: 0.137 seconds
+Real time usage: 0.190 seconds
+Preprocessor visited node count: 1226/1000000
 Post&#8208;expand include size: 30221/2097152 bytes
 Template argument size: 11791/2097152 bytes
 Highest expansion depth: 7/100
@@ -455,19 +457,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.991      1 -total
- 16.22%    7.948      1 Template:Userdocnavi/cs
- 15.83%    7.757      1 Template:Sketcher_Tools_navi/cs
- 11.32%    5.548      2 Template:Navigation_menu_2
-  9.17%    4.495      3 Template:PropertyView
-  8.01%    3.927     96 Template:MenuCommand
-  6.84%    3.351      1 Template:Value
-  5.17%    2.532      3 Template:Variable
-  4.67%    2.286      2 Template:Docnav
-  4.27%    2.092      3 Template:Emphasis
+100.00%   53.416      1 -total
+ 13.02%    6.957      3 Template:PropertyView
+ 11.80%    6.302      1 Template:Sketcher_Tools_navi/cs
+ 10.44%    5.576     96 Template:MenuCommand
+  8.37%    4.469      1 Template:Userdocnavi/cs
+  8.34%    4.457      2 Template:Navigation_menu_2
+  7.35%    3.924     19 Template:Version
+  6.51%    3.475      3 Template:Variable
+  5.80%    3.098      1 Template:Value
+  5.16%    2.756      3 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122154622 and revision id 1742451. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122154657 and revision id 1742453. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
