--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -7,7 +7,7 @@
 <li><a href="../it/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Preferenze di Sketcher (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Ustawienia (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="Prefer&ecirc;ncias (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--high" title="&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; (77% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#35373;&#23450; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
@@ -184,7 +184,7 @@
 </p>
 <h2><span id="Zobrazen.C3.AD"></span><span class="mw-headline" id="Zobrazen&iacute;">Zobrazen&iacute;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Display.png&amp;filetimestamp=20240513144018&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Display.png" decoding="async" width="400" height="383" class="mw-file-element" data-file-width="600" data-file-height="574"></a></span>
-</p><p>On this page you can specify the following:
+</p><p>Na t&eacute;to str&aacute;nce m&#367;&#382;ete nastavit n&aacute;sleduj&iacute;c&iacute; hodnoty:
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
@@ -441,35 +441,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122154657
+Cached time: 20260122154803
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.190 seconds
+CPU time usage: 0.160 seconds
+Real time usage: 0.217 seconds
 Preprocessor visited node count: 1226/1000000
 Post&#8208;expand include size: 30221/2097152 bytes
 Template argument size: 11791/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2249/5000000 bytes
+Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.416      1 -total
- 13.02%    6.957      3 Template:PropertyView
- 11.80%    6.302      1 Template:Sketcher_Tools_navi/cs
- 10.44%    5.576     96 Template:MenuCommand
-  8.37%    4.469      1 Template:Userdocnavi/cs
-  8.34%    4.457      2 Template:Navigation_menu_2
-  7.35%    3.924     19 Template:Version
-  6.51%    3.475      3 Template:Variable
-  5.80%    3.098      1 Template:Value
-  5.16%    2.756      3 Template:Emphasis
+100.00%   52.938      1 -total
+ 15.88%    8.409      1 Template:Sketcher_Tools_navi/cs
+ 10.85%    5.742      2 Template:Navigation_menu_2
+ 10.39%    5.501      1 Template:Userdocnavi/cs
+  8.98%    4.754     96 Template:MenuCommand
+  8.93%    4.728      3 Template:PropertyView
+  6.72%    3.559      1 Template:Value
+  6.40%    3.388      3 Template:KEY
+  5.50%    2.909      2 Template:Docnav
+  4.85%    2.570      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122154657 and revision id 1742453. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122154803 and revision id 1742456. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
