Created page with "{| class="wikitable float-right mw-collapsible mw-uncollapsed" !style="width: 33%;"|Název !style="width: 66%;"|Popis |- | {{MenuCommand|Velikost písma}} | Velikost písma použitá pro popisky a vazby ve skice. |- | {{MenuCommand|Velikost symbolu vazby}} {{Version|1.1}} | Velikost pixelu pro symboly vazeb. |- | {{MenuCommand|Měřítko pohledu}} {{Version|0.21}} | 3D zobrazení je škálováno na základě tohoto faktoru. |- | {{MenuCommand|Segmentů na geometrii}} | K..."

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -188,101 +188,101 @@
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
-<th style="width: 33%;">Name
+<th style="width: 33%;">N&aacute;zev
 </th>
-<th style="width: 66%;">Description
+<th style="width: 66%;">Popis
 </th></tr>
 <tr>
-<td><b>Font size</b>
+<td><b>Velikost p&iacute;sma</b>
 </td>
-<td>The font size used for the labels and constraints in the sketch.
+<td>Velikost p&iacute;sma pou&#382;it&aacute; pro popisky a vazby ve skice.
 </td></tr>
 <tr>
-<td><b>Constraint symbol size</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>Velikost symbolu vazby</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>Pixel size for constraint symbols.
+<td>Velikost pixelu pro symboly vazeb.
 </td></tr>
 <tr>
-<td><b>View scale ratio</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
+<td><b>M&#283;&#345;&iacute;tko pohledu</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </td>
-<td>The 3D View is scaled based on this factor.
+<td>3D zobrazen&iacute; je &scaron;k&aacute;lov&aacute;no na z&aacute;klad&#283; tohoto faktoru.
 </td></tr>
 <tr>
-<td><b>Segments per geometry</b>
+<td><b>Segment&#367; na geometrii</b>
 </td>
-<td>Curves are approximated by polygon segments for visualization. This value defines the number of segments. The lower limit is 50 segments. Higher values refine the visualization but can lead to longer calculation times, especially for <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-splines</a>.
+<td>K&#345;ivky jsou pro vizualizaci aproximov&aacute;ny segmenty polygonu. Tato hodnota definuje po&#269;et segment&#367;. Doln&iacute; hranice je 50 segment&#367;. Vy&scaron;&scaron;&iacute; hodnoty zp&#345;es&#328;uj&iacute; vizualizaci, ale mohou v&eacute;st k del&scaron;&iacute;mu v&yacute;po&#269;tu, zejm&eacute;na u <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-spline</a>.
 </td></tr>
 <tr>
-<td><b>Ask for value after creating a dimensional constraint</b>
+<td><b>Zeptat se na hodnotu po vytvo&#345;en&iacute; vazby vzd&aacute;lenosti</b>
 </td>
-<td>If checked, a dialog will pop up to input a value for new dimensional constraints.
+<td>Pokud je za&scaron;krtnuto, objev&iacute; se dialogov&eacute; okno pro zad&aacute;n&iacute; hodnoty nov&yacute;ch rozm&#283;rov&yacute;ch vazeb.
 </td></tr>
 <tr>
-<td><b>Geometry creation "Continue Mode"</b>
+<td><b>Vytv&aacute;&#345;en&iacute; geometrie v "kontinu&aacute;ln&iacute;m m&oacute;du"</b>
 </td>
-<td>If checked, geometry creation tools will remain active after creating an element. You can leave a tool any time by right-clicking in the sketch.
+<td>Pokud je tato mo&#382;nost za&scaron;krtnuta, n&aacute;stroje pro vytv&aacute;&#345;en&iacute; geometrie z&#367;stanou aktivn&iacute; i po vytvo&#345;en&iacute; prvku. N&aacute;stroj m&#367;&#382;ete kdykoli opustit kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na n&aacute;&#269;rt.
 </td></tr>
 <tr>
-<td><b>Constraint creation "Continue Mode"</b>
+<td><b>Vytv&aacute;&#345;en&iacute; vazeb v "kontinu&aacute;ln&iacute;m m&oacute;du"</b>
 </td>
-<td>If checked, constraint creation tools will remain active after creating a constraint. You can leave a tool any time by right-clicking in the sketch.
+<td>Pokud je tato mo&#382;nost za&scaron;krtnuta, n&aacute;stroje pro vytv&aacute;&#345;en&iacute; vazeb z&#367;stanou aktivn&iacute; i po vytvo&#345;en&iacute; vazby. N&aacute;stroj m&#367;&#382;ete kdykoli opustit kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na n&aacute;&#269;rt.
 </td></tr>
 <tr>
-<td><b>Hide base length units for supported unit systems</b>
+<td><b>Skr&yacute;t z&aacute;kladn&iacute; d&eacute;lkov&eacute; jednotky pro podporovan&eacute; jednotkov&eacute; soustavy</b>
 </td>
-<td>If checked, the length unit from the selected <a href="../Preferences_Editor.html#Units" title="Preferences Editor">unit system</a> is used but not displayed in sketch constraints. Only for supported unit systems.
+<td>Pokud je za&scaron;krtnuto, pou&#382;ije se jednotka d&eacute;lky z vybran&eacute;ho <a href="../Preferences_Editor.html#Units" title="Preferences Editor">syst&eacute;mu jednotek</a>, ale nezobraz&iacute; se ve vazb&aacute;ch n&aacute;&#269;rtu. Pouze pro podporovan&eacute; jednotkov&eacute; syst&eacute;my.
 </td></tr>
 <tr>
-<td><b>Show coordinates next to the cursor while editing</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
+<td><b>Zobrazit sou&#345;adnice vedle kurzoru b&#283;hem &uacute;prav</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </td>
-<td>If checked, cursor coordinates are displayed beside the cursor while editing a sketch.
+<td>Pokud je za&scaron;krtnuto, sou&#345;adnice kurzoru se zobrazuj&iacute; vedle kurzoru p&#345;i &uacute;prav&aacute;ch n&aacute;&#269;rtu.
 </td></tr>
 <tr>
-<td><b>Use system decimals setting for cursor coordinates</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
+<td><b>Pro sou&#345;adnice kurzoru pou&#382;&iacute;t nastaven&iacute; syst&eacute;mov&yacute;ch desetinn&yacute;ch m&iacute;st</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </td>
-<td>If checked, cursor coordinates will use the system decimals setting instead of the short form.
+<td>Pokud je za&scaron;krtnuto, sou&#345;adnice kurzoru budou pou&#382;&iacute;vat syst&eacute;mov&eacute; desetinn&eacute; nastaven&iacute; nam&iacute;sto zkr&aacute;cen&eacute; formy.
 </td></tr>
 <tr>
-<td><b>Show dimensional constraint name with format</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
+<td><b>Zobrazit n&aacute;zev rozm&#283;rov&yacute;ch vazeb s form&aacute;tem</b> <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </td>
-<td>If checked, the names of dimensional constraints (if available) are displayed using the given format:
-<ul><li><b>%N</b>: Parameter name.</li>
-<li><b>%V</b>: Dimension value.</li></ul>
+<td>Pokud je za&scaron;krtnuto, zobraz&iacute; se n&aacute;zvy rozm&#283;rov&yacute;ch vazeb (jsou-li k dispozici) v dan&eacute;m form&aacute;tu:
+<ul><li><b>%N</b>: N&aacute;zev parametru.</li>
+<li><b>%V</b>: Hodnota rozm&#283;ru.</li></ul>
 </td></tr>
 <tr>
-<td><b>Hide all objects that depend on the sketch</b>
+<td><b>Skr&yacute;t v&scaron;echny objekty, kter&eacute; z&aacute;vis&iacute; na n&aacute;&#269;rtu</b>
 </td>
-<td>If checked, all objects that depend on the sketch will be hidden when the sketch is opened. Note that this may have no effect if the <b>Show objects used for external geometry</b> and/or <b>Show objects that the sketch is attached to</b> options are selected.
+<td>Pokud je za&scaron;krtnuto, v&scaron;echny objekty, kter&eacute; z&aacute;vis&iacute; na n&aacute;&#269;rtu, budou p&#345;i otev&#345;en&iacute; n&aacute;&#269;rtu skryty. Upozor&#328;ujeme, &#382;e to nemus&iacute; m&iacute;t &#382;&aacute;dn&yacute; &uacute;&#269;inek, pokud jsou vybr&aacute;ny mo&#382;nosti <b>Zobrazit objekty pou&#382;it&eacute; pro extern&iacute; geometrii</b> a/nebo <b>Zobrazit objekty, ke kter&yacute;m je n&aacute;&#269;rt p&#345;ipojen</b>.
 </td></tr>
 <tr>
-<td><b>Show objects used for external geometry</b>
+<td><b>Zobrazit objekty pou&#382;it&eacute; pro vn&#283;j&scaron;&iacute; geometrii</b>
 </td>
-<td>If checked, hidden objects used for external geometry will be shown when the sketch is opened.
+<td>Pokud je za&scaron;krtnuto, skryt&eacute; objekty pou&#382;it&eacute; pro vn&#283;j&scaron;&iacute; geometrii se p&#345;i otev&#345;en&iacute; n&aacute;&#269;rtu zobraz&iacute;.
 </td></tr>
 <tr>
-<td><b>Show objects that the sketch is attached to</b>
+<td><b>Zobrazit objekty, ke kter&yacute;m je p&#345;ipojen n&aacute;&#269;rt</b>
 </td>
-<td>If checked, hidden objects the sketch is attached to will be shown when the sketch is opened.
+<td>Pokud je za&scaron;krtnuto, skryt&eacute; objekty, ke kter&yacute;m je skica p&#345;ipojena, se p&#345;i otev&#345;en&iacute; skici zobraz&iacute;.
 </td></tr>
 <tr>
-<td><b>Restore camera position after editing</b>
+<td><b>Obnovit polohu kamery po &uacute;prav&aacute;ch</b>
 </td>
-<td>If checked, the camera position is moved back to where it was before the sketch was opened.
+<td>Pokud je za&scaron;krtnuto, pozice kamery se p&#345;esune zp&#283;t na m&iacute;sto, kde byla p&#345;ed otev&#345;en&iacute;m n&aacute;&#269;rtu.
 </td></tr>
 <tr>
-<td><b>Force orthographic camera when entering edit</b>
+<td><b>P&#345;i vstupu do re&#382;imu &uacute;prav vynutit ortografick&yacute; pohled kamery</b>
 </td>
-<td>If checked, camera mode will be forced to orthographic when the sketch is opened. Camera mode will be restored when leaving edit mode. This preference is only available if <b>Restore camera position after editing</b> is activated.
+<td>Pokud je za&scaron;krtnuto, bude p&#345;i otev&#345;en&iacute; skici vynucen ortografick&yacute; re&#382;im kamery. Re&#382;im kamery bude obnoven po opu&scaron;t&#283;n&iacute; re&#382;imu &uacute;prav. Tato p&#345;edvolba je k dispozici pouze v p&#345;&iacute;pad&#283;, &#382;e je aktivov&aacute;na mo&#382;nost <b>Obnovit pozici kamery po &uacute;prav&aacute;ch</b>.
 </td></tr>
 <tr>
-<td><b>Open sketch in section view mode</b>
+<td><b>Otev&#345;&iacute;t n&aacute;&#269;rt v re&#382;imu pohledu na &#345;ez</b>
 </td>
-<td>If checked, the sketch will open with 'Section View' active.
+<td>Pokud je za&scaron;krtnuto, otev&#345;e se n&aacute;&#269;rt s aktivn&iacute;m &bdquo;Pohledem na &#345;ez&ldquo;.
 </td></tr>
 <tr>
-<td><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><b>Apply to Existing Sketches</b></span>
+<td><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><b>Pou&#382;&iacute;t na existuj&iacute;c&iacute; n&aacute;&#269;rtky</b></span>
 </td>
-<td>If pressed, the <b>Visibility Automation</b> settings will be applied to existing sketches too. Otherwise they will only be used for new sketches.
+<td>Pokud je stisknuto, nastaven&iacute; <b>Automatizace viditelnosti</b> se pou&#382;ije i na st&aacute;vaj&iacute;c&iacute; n&aacute;&#269;rtky. V opa&#269;n&eacute;m p&#345;&iacute;pad&#283; se pou&#382;ije pouze pro nov&eacute; n&aacute;&#269;rtky.
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Appearance">Appearance</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Appearance.png&amp;filetimestamp=20240425131953&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Appearance.png" decoding="async" width="400" height="470" class="mw-file-element" data-file-width="600" data-file-height="705"></a></span>
@@ -441,15 +441,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122154803
+Cached time: 20260122161923
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.160 seconds
-Real time usage: 0.217 seconds
+CPU time usage: 0.129 seconds
+Real time usage: 0.184 seconds
 Preprocessor visited node count: 1226/1000000
-Post&#8208;expand include size: 30221/2097152 bytes
-Template argument size: 11791/2097152 bytes
+Post&#8208;expand include size: 30397/2097152 bytes
+Template argument size: 11967/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -457,19 +457,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.938      1 -total
- 15.88%    8.409      1 Template:Sketcher_Tools_navi/cs
- 10.85%    5.742      2 Template:Navigation_menu_2
- 10.39%    5.501      1 Template:Userdocnavi/cs
-  8.98%    4.754     96 Template:MenuCommand
-  8.93%    4.728      3 Template:PropertyView
-  6.72%    3.559      1 Template:Value
-  6.40%    3.388      3 Template:KEY
-  5.50%    2.909      2 Template:Docnav
-  4.85%    2.570      3 Template:Variable
+100.00%   45.919      1 -total
+ 21.11%    9.695      1 Template:Sketcher_Tools_navi/cs
+ 11.22%    5.152      1 Template:Userdocnavi/cs
+  9.87%    4.530      2 Template:Navigation_menu_2
+  9.07%    4.165      3 Template:PropertyView
+  8.18%    3.758      1 Template:Value
+  8.05%    3.697     96 Template:MenuCommand
+  4.51%    2.072      2 Template:Docnav
+  4.33%    1.989      3 Template:Variable
+  3.96%    1.818     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122154803 and revision id 1742456. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122161923 and revision id 1742458. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
