--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -284,7 +284,9 @@
 </td>
 <td>Pokud je stisknuto, nastaven&iacute; <b>Automatizace viditelnosti</b> se pou&#382;ije i na st&aacute;vaj&iacute;c&iacute; n&aacute;&#269;rtky. V opa&#269;n&eacute;m p&#345;&iacute;pad&#283; se pou&#382;ije pouze pro nov&eacute; n&aacute;&#269;rtky.
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Appearance">Appearance</span></h2>
+<p><span id="Appearance"></span>
+</p>
+<h2><span class="mw-headline" id="Vzhled">Vzhled</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Appearance.png&amp;filetimestamp=20240425131953&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Appearance.png" decoding="async" width="400" height="470" class="mw-file-element" data-file-width="600" data-file-height="705"></a></span>
 </p><p>Unless otherwise stated these preferences are only used while a sketch is in edit mode.
 </p><p>On this page you can specify the following:
@@ -441,13 +443,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122161923
+Cached time: 20260122161937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.129 seconds
-Real time usage: 0.184 seconds
-Preprocessor visited node count: 1226/1000000
+CPU time usage: 0.138 seconds
+Real time usage: 0.198 seconds
+Preprocessor visited node count: 1227/1000000
 Post&#8208;expand include size: 30397/2097152 bytes
 Template argument size: 11967/2097152 bytes
 Highest expansion depth: 7/100
@@ -457,19 +459,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.919      1 -total
- 21.11%    9.695      1 Template:Sketcher_Tools_navi/cs
- 11.22%    5.152      1 Template:Userdocnavi/cs
-  9.87%    4.530      2 Template:Navigation_menu_2
-  9.07%    4.165      3 Template:PropertyView
-  8.18%    3.758      1 Template:Value
-  8.05%    3.697     96 Template:MenuCommand
-  4.51%    2.072      2 Template:Docnav
-  4.33%    1.989      3 Template:Variable
-  3.96%    1.818     19 Template:Version
+100.00%   50.321      1 -total
+ 15.87%    7.985      1 Template:Sketcher_Tools_navi/cs
+ 10.04%    5.051      3 Template:PropertyView
+  9.78%    4.922      2 Template:Navigation_menu_2
+  9.01%    4.535     96 Template:MenuCommand
+  8.26%    4.156      1 Template:Userdocnavi/cs
+  8.10%    4.076      1 Template:Value
+  5.81%    2.922      3 Template:Variable
+  5.41%    2.720      1 Template:TOCright
+  4.81%    2.419      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122161923 and revision id 1742458. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122161937 and revision id 1742460. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
