--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -288,7 +288,7 @@
 </p>
 <h2><span class="mw-headline" id="Vzhled">Vzhled</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Appearance.png&amp;filetimestamp=20240425131953&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Appearance.png" decoding="async" width="400" height="470" class="mw-file-element" data-file-width="600" data-file-height="705"></a></span>
-</p><p>Unless otherwise stated these preferences are only used while a sketch is in edit mode.
+</p><p>Pokud nen&iacute; uvedeno jinak, tyto p&#345;edvolby se pou&#382;&iacute;vaj&iacute; pouze v re&#382;imu &uacute;prav n&aacute;&#269;rtu.
 </p><p>On this page you can specify the following:
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
@@ -443,12 +443,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122161937
+Cached time: 20260122162007
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.177 seconds
 Preprocessor visited node count: 1227/1000000
 Post&#8208;expand include size: 30397/2097152 bytes
 Template argument size: 11967/2097152 bytes
@@ -459,19 +459,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.321      1 -total
- 15.87%    7.985      1 Template:Sketcher_Tools_navi/cs
- 10.04%    5.051      3 Template:PropertyView
-  9.78%    4.922      2 Template:Navigation_menu_2
-  9.01%    4.535     96 Template:MenuCommand
-  8.26%    4.156      1 Template:Userdocnavi/cs
-  8.10%    4.076      1 Template:Value
-  5.81%    2.922      3 Template:Variable
-  5.41%    2.720      1 Template:TOCright
-  4.81%    2.419      1 Template:Button
+100.00%   46.065      1 -total
+ 15.40%    7.095      1 Template:Sketcher_Tools_navi/cs
+ 11.53%    5.310     96 Template:MenuCommand
+ 10.17%    4.684      2 Template:Navigation_menu_2
+  8.85%    4.077      1 Template:Userdocnavi/cs
+  8.47%    3.900      3 Template:PropertyView
+  5.86%    2.699      1 Template:TOCright
+  5.65%    2.604      2 Template:Docnav
+  5.45%    2.511      1 Template:Value
+  4.37%    2.014      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122161937 and revision id 1742460. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122162007 and revision id 1742463. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
